--- a/AppStoreRanking/en.lproj/MainStoryboard.storyboard
+++ b/AppStoreRanking/en.lproj/MainStoryboard.storyboard
@@ -66,12 +66,13 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" id="NSk-SF-UnI">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" id="NSk-SF-UnI">
                                 <rect key="frame" x="203" y="20" width="97" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
                                 <connections>
+                                    <action selector="editFieldTouched:" destination="kTG-Dd-hba" eventType="touchUpInside" id="m7W-D3-MJs"/>
                                     <action selector="editingFinished:" destination="kTG-Dd-hba" eventType="editingDidEndOnExit" id="d0G-yN-wdD"/>
                                     <action selector="editingFinished:" destination="kTG-Dd-hba" eventType="editingDidEnd" id="ivh-o7-EEQ"/>
                                 </connections>
@@ -163,6 +164,26 @@
             <point key="canvasLocation" x="582" y="219"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="AppStoreSelectionTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AppStoreSelectionTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="ingestDataButtonPressed:"/>
+                <relationship kind="action" name="rankingsButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="SeachViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SeachViewController.h"/>
+        </class>
+        <class className="SettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="editFieldTouched:"/>
+                <relationship kind="action" name="editingFinished:"/>
+                <relationship kind="outlet" name="editField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
